# egonlang

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  LANGUAGE.md  README.md  justfile
book/: 404.html  (+6 more)
egonlang-core/: Cargo.toml  README.md  build.rs
egonlang-core/res/examples/invalid/: assign_expr_with_type_identifier.eg  assign_mixed_type_list.eg  block_expr_mismatch_type_prefix_bang_list.eg  block_expr_mismatch_type_prefix_bang_string.eg  block_expr_mismatch_type_prefix_bang_tuple.eg  block_returning_prefix_expr_negate_bool.eg  block_returning_prefix_expr_negate_fn.eg  block_returning_prefix_expr_negate_list.eg  block_returning_prefix_expr_negate_string.eg  block_returning_prefix_expr_negate_tuple.eg  block_with_stmts_having_type_invalid_stmts_and_returning_expr.eg  const_decl_in_grouping_parans.eg  const_decl_typed_with_assign_chain_typed.eg  const_decl_typed_with_nonidentifier.eg  const_decl_typed_without_assign.eg  const_decl_untyped_sets_env_type_reassign_type_mismatch.eg  const_decl_with_assign_chain_typed.eg  const_decl_with_no_identifier.eg  const_decl_without_assign.eg  fn_expr_mismatch_return_identifier_declared_in_body.eg  fn_expr_mismatch_return_type_expect_number_actual_unit.eg  fn_expr_mismatch_return_type_expect_unit_actual_number.eg  fn_expr_returning_empty_list.eg  fn_expr_returning_list.eg  fn_expr_returning_range.eg  fn_expr_returning_unit.eg  fn_expr_type_mismatch_in_body_infix_bang.eg  fn_expr_type_mismatch_in_body_minus.eg  fn_expr_type_mismatch_in_body_sum.eg  fn_expr_type_mismatch_in_body_undefined_identifier.eg  fn_expr_typecheck_body.eg  if_else_expression_unit_expr_as_cond_then.eg  if_else_expression_with_expr_as_then_and_else.eg  if_else_expression_with_invalid_and_infix_as_condition.eg  if_else_expression_with_invalid_infix_as_then.eg  if_else_expression_with_unit_expr_as_cond_then_else.eg  if_expression_unit_as_cond.eg  if_expression_with_expr_cond.eg  if_expression_with_expr_then.eg  infix_type_mismatch_bool.eg  (+38 more)
egonlang-core/res/examples/todo/: example.eg
egonlang-core/res/examples/valid/: block_expr_prefix_bang_bool_false.eg  block_mixed.eg  block_mixed_returns_expr.eg  block_mixed_statements_only.eg  block_nested.eg  block_return_number_expression.eg  block_return_string_expression.eg  block_statements.eg  comments.eg  const_decl_typed_assinging_fn_expr.eg  const_decl_typed_without_assign.eg  const_decl_with_assign_from_if_else_expr.eg  fn_decl.eg  fn_expr.eg  fn_expr_returning_fn_expr.eg  fn_expr_type_match_in_body_param_identifier.eg  if_else_expression_assign.eg  if_else_expression_expr_then_else.eg  if_else_expressions.eg  if_elseif_else_expression.eg  if_elseif_expression.eg  if_expression.eg  if_expression_as_list_expr_value.eg  if_expression_as_tuple_expr_value.eg  if_expression_assign.eg  if_expression_expr_then.eg  if_expression_unit_as_cond.eg  infix_addition_negative_numbers.eg  infix_division_negative_numbers.eg  infix_modulus_negative_numbers.eg  infix_multiplication_negative_numbers.eg  let_decl_typed_with_assign.eg  list.eg  (+16 more)
egonlang-core/src/: ast.rs  diagnostics.rs  errors.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  validator.rs
egonlang-core/src/ast/: expressions.rs  mod.rs  module.rs  statements.rs
egonlang-core/tests/: integration.rs
egonlang-errors/: Cargo.toml  README.md
egonlang-errors/src/: lib.rs
egonlang-lsp/: Cargo.toml
egonlang-lsp/src/: main.rs  server.rs
egonlang-types/: Cargo.toml  README.md
egonlang-types/src/: lib.rs  type_env.rs
egonlang-verifier/: Cargo.toml  README.md
egonlang-verifier/src/: lib.rs  type_env.rs  verifier.rs  verify_trace.rs  visitor.rs
egonlang-verifier/src/rules/: const_declaration_with_no_value.rs  divide_by_zero.rs  invalid_type_alias_name.rs  mod.rs  reassigning_const_values.rs  rule.rs  type_mismatch_fn_return_expr.rs  type_mismatch_if_cond_expr.rs  type_mismatch_if_then_else_exprs.rs  type_mismatch_infix.rs  type_mismatch_list_items.rs  type_mismatch_negate_prefix.rs  type_mismatch_on_assignment.rs  type_mismatch_on_declarations.rs  type_mismatch_prefix.rs  type_mismatch_reassigning_let_values.rs  undefined_identifier.rs
egonlang-verifier/tests/: integration.rs
(+594 files in other folders)
