[package]
name = "egonlang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
logos = "0.12.0"
lalrpop-util = "0.19.6"
regex = "1.10.4"
paste = "1.0.15"
egonlang-errors = { path = "../egonlang-errors" }
span = { path = "../span" }

[dev-dependencies]
pretty_assertions = "1.1.0"

[build-dependencies]
build-deps = "0.1.4"
lalrpop = { version = "0.19.1", default-features = false }
