[package]
name = "egonlang-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
codespan-reporting = "0.11.1"
egonlang-core = { path = "../egonlang-core" }
egonlang-verifier = { path = "../egonlang-verifier" }
egonlang-diagnostics = { path = "../egonlang-diagnostics" }
egonlang-types = { path = "../egonlang-types" }
str-idxpos = { path = "../str-idxpos" }
span = { path = "../span" }
