[package]
name = "egonlang-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
paste = "1.0.15"
tracelog = { path = "../tracelog" }
colored = "2"

[dev-dependencies]
pretty_assertions = "1.1.0"

[features]
tracelog = ["tracelog/tracelog"]
