[package]
name = "egonlang-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
egonlang-core = { path = "../egonlang-core" }
egonlang-errors = { path = "../egonlang-errors" }
egonlang-types = { path = "../egonlang-types" }
tracelog = { path = "../tracelog" }
span = { path = "../span" }
colored = "2"
paste = "1.0.15"

[dev-dependencies]
pretty_assertions = "1.1.0"
rstest = "0.19.0"

[features]
tracelog = ["tracelog/tracelog"]
